Fix 2 code smells